@@ -1,7 +1,7 @@
 asdf
 {% if
-    1 = 1
-    and 2 = 2
+    1 == 1
+    and 2 == 2
 %}
     asdf
     asdf
@@ -18,7 +18,7 @@ asdf
     {% endverbatim
     %}
 
-    {% with bla=1 bla1=2 %}
+    {% with bla==1 bla1==2 %}
         {% comment %} this is
             some
             kind o
